--- a/css/styles.css
+++ b/css/styles.css
@@ -486,7 +486,7 @@ a:visited {
 #emily-sugano-cover {
     background-image: url("http://i.imgur.com/HYFTqwa.jpg");
 }
- 
+
 #emily-sugano-card {
     background-image: url("http://i.imgur.com/QZl4wU0.jpg");
 }
@@ -5016,9 +5016,16 @@ a:visited {
 #julia-thompson-cover {
     background-image: url("http://i.imgur.com/95AcWIm.jpg");
   }
- 
+
 #julia-thompson-card {
     background-image: url("http://i.imgur.com/wIKLtDr.jpg");
+}
+#austin-sargent-cover {
+ background-image: url("https://pbs.twimg.com/media/CdDhV2MUkAA42qu.jpg:large");
+}
+
+#austin-sargent-card {
+ background-image: url("https://pbs.twimg.com/profile_images/709792307449450496/obALtzTx_400x400.jpg");
 }
 
 .view-profile-div {
